--- a/Lab1/CMakeLists.txt
+++ b/Lab1/CMakeLists.txt
@@ -21,7 +21,8 @@ add_subdirectory(${MBED_PATH})
 add_executable(Lab1)
 mbed_configure_app_target(Lab1)
 
-target_sources(Lab1 PRIVATE src/main.cpp)
+target_sources(Lab1 PRIVATE src/main.cpp src/function_context.cpp
+                            src/hardware.cpp)
 target_link_libraries(Lab1 PRIVATE mbed-baremetal)
 
 mbed_set_post_build(Lab1)
